[package]
name = "queue-file"
version = "1.4.6"
license = "Apache-2.0"
authors = ["ING Systems <contact@ing-systems.com>"]
description = "queue-file is a lightning-fast, transactional, file-based FIFO"
edition = "2021"
homepage = "https://github.com/ing-systems/queue-file"
repository = "https://github.com/ing-systems/queue-file"
readme = "README.md"
keywords = ["io", "fifo", "queue"]
categories = ["data-structures"]

[dependencies]
bytes = "1.0"
snafu = "0.7"

[dev-dependencies]
auto-delete-path = "0.2.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-case = "2.1.0"
